move sqlite database to /sixeleven.abe directory

--- a/contrib/docker/sqlite.conf
+++ b/contrib/docker/sqlite.conf
@@ -1,11 +1,11 @@
 dbtype = sqlite3
-connect-args = abe.sqlite
+connect-args = /sixeleven.abe/abe.sqlite
 upgrade
 port 80
 
 default-loader = blkfile
 
-datadir += [{
+datadir = [{
     "dirname": "/sixeleven",
     "chain": "SixEleven",
     "code3": "SIL",
